license: Add referenced 2-Clause BSD License
This adds a `COPYING` file to the repository with the 2-Clause BSD
License that is referenced in `bip-witaddr.mediawiki`. It also adds a
link back to COPYING in `bip-witaddr.mediawiki` in the aforementioned
reference.

This also updates the created date from `2016-03-20` to `2017-03-20`. I
was thinking that maybe this was supposed to be referencing yesterday,
not yesterday, a year ago.

--- a/bip-witaddr.mediawiki
+++ b/bip-witaddr.mediawiki
@@ -7,7 +7,7 @@
   Comments-URI: ???
   Status: Draft
   Type: Informational
-  Created: 2016-03-20
+  Created: 2017-03-20
   License: BSD-2-Clause
 </pre>
 
@@ -19,7 +19,7 @@ This document proposes a checksummed base32 format, "Bech32", and a standard for
 
 ===Copyright===
 
-This BIP is licensed under the 2-clause BSD license.
+This BIP is licensed under the [https://github.com/bitcoin/bips/blob/master/COPYING 2-clause BSD license].
 
 ===Motivation===
 
